css/styles.css
/* general */
html {
	font-family: "Lato";
	font-size: 16px;
}
h1 {
	text-align: center;
	font-size: 8vw;
	color: #ffffff;
	font-family: "Lato";
	font-weight: 700;
	filter: drop-shadow(-0.891px 0.454px 20px rgba(1, 1, 1, 0.55));
}
a,
a:hover {
	color: inherit;
}

h2 {
	font-size: 18px;
}
hr {
	border-color: red;
}

/* a:hover {
	text-decoration: none;
} */

.bg-lightblue {
	background: var(--lightblue);
}

.bg-red {
	background: var(--red);
}

.text-red {
	color: var(--red);
}

.container-fluid-max {
	max-width: 1440px;
}

.cover {
	background: no-repeat center/cover;
}

.p-15 {
	padding: 15px;
}
/* header */

.scroll .page-header {
	background: var(--red);
}

/* .page-header {
	transition: background 0.5s ease-in-out;
} */

.page-header .navbar {
	padding: 1rem 5rem;
}

/* .page-header .navbar-toggler {
	border-color: var(--white);
} */
.page-header {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1;
}

/* Home */
.scroll .hero {
	transform: scale(0.98);
}

.hero {
	background-attachment: fixed;
	transition: transform 0.5s ease-in-out;
}

.hero::after {
	content: "";
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	/* background: linear-gradient(
		rgba(0, 0, 0, 0.5) 0,
		rgba(0, 0, 0, 0.3) 50%,
		rgba(0, 0, 0, 0.1) 100%
	); */
}

.hero .container-fluid {
	z-index: 10;
}
.home-favorite {
	font-size: 36px;
	color: #ffffff;
	font-family: "Times New Roman";
	font-weight: bold;
	font-style: italic;
	filter: drop-shadow(-0.891px 0.454px 20px rgba(1, 1, 1, 0.55));
	margin: auto;
}
.home-recipies {
	margin: 0 auto 1%;
}
.btn-start {
	margin: 0 auto 30px;
	padding: 15px;
	height: 60px;
	font-size: 18px;
	border: solid white 0.1rem;
}
.home-send {
	display: block;
	margin: 30px;
	font-size: 14px;
	color: #ffffff;
	font-family: "Lato";
	font-weight: 400;
	filter: drop-shadow(-0.891px 0.454px 20px rgba(1, 1, 1, 0.55));
}
@media (max-width: 575.98px) {
	.home-recipies {
		font-size: 50px;
	}
	.home-favorite {
		font-size: 26px;
	}
}
/* Overview */
.overview-hr {
	width: 40%;
	text-align: left;
	margin-top: 0.5rem;
}
/*  Iphone  */
@media (max-width: 768px) {
	#iphone {
		text-align: center;
	}
}
.iphone {
	background-color: #f6f6f6;
}
.iphone-left,
.iphone-right {
	padding: 4rem;
}
.iphone-img {
	position: relative;
	top: 4rem;
	width: 70%;
}
.iphone-hr {
	width: 20%;
	border-color: red;
	margin-top: 0.5rem;
}
/* Reviews */

#reviews {
	background-color: #4a3949;
	background-image: url(../images/review_background.png);
	background-position: center center;
	background-repeat: no-repeat;
	background-size: auto 175%;
}

.client-profile {
	width: 100px;
	height: 100px;
	border-radius: 50%;
	border: gray solid 5px;
}
.carousel-indicators li {
	width: 10px;
	height: 10px;
	border-radius: 100%;
}
/* Cuisines */
#cuisines {
	text-align: center;
}
.cuisine-cell {
	padding: 0;
	margin: 0;
	width: 20%;
	text-align: center;
	padding: auto;
	position: relative;
}
@media (max-width: 576px) {
	.cuisine-cell {
		width: 50%;
	}
}
.cuisines-hr {
	width: 10%;
}
.cuisines .container {
	margin: 0;
	display: flexbox;
	flex-direction: row;
}

.cuisines img {
	width: 100%;
	height: auto;
	position: relative;
}
.img-overlay {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
}
.recipes-num {
	color: #ffffff;
	font-family: "Times New Roman", Times, serif;
	font-size: 15px;
	font-weight: bold;
	font-style: italic;
	filter: drop-shadow(-0.891px 0.454px 20px rgba(1, 1, 1, 0.55));
}
.cuisine-title {
	color: white;
	font-size: 36px;
	font-family: "Lato";
}
/* Numbers */
.counter {
	font-size: 36px;
}
/* Footer */
.footer {
	background-color: #f7f7f7;
}

